fixed video z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -228,11 +228,7 @@ section {
 .hero {
   height: 90vh;
   overflow: hidden;
-  background-image: url("../assets/img/silver-spades-banner.png");
-  background-attachment: scroll;
-  background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: $primary-bg;
 
   &::after {
     content: "";
@@ -259,6 +255,7 @@ section {
     left: 50%;
     height: 100%;
     width: 100%;
+    z-index: 4;
     object-fit: cover;
     @include center-element-abs();
   }
@@ -270,6 +267,7 @@ section {
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 5;
     @include center-element-abs();
   }
 
@@ -285,6 +283,7 @@ section {
     font-size: 1.7rem;
     text-transform: uppercase;
     letter-spacing: 0.5em;
+    z-index: 5;
     @include center-element-abs();
 
     @media screen and (max-width: $mobile) {
